--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
+    "react-table": "^7.8.0",
     "react-to-print": "^2.14.13",
     "uid": "^2.0.2",
     "uuid": "^9.0.0"
