--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "moment-range": "^4.0.2",
+    "print-js": "^1.6.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-date-range": "^1.4.0",
@@ -29,8 +31,11 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-table": "^7.8.0",
+    "react-thermal-printer": "^0.13.0",
     "react-to-print": "^2.14.13",
+    "thermal-printer-encoder": "^2.0.0",
     "uid": "^2.0.2",
+    "uint8arrays": "^4.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
